<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/verde_fondo"
    tools:context="com.example.jardnzen_app.RegistroActivity">

    <!--logo-->
    <ImageView
        android:src="@drawable/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <!--Registrar-->
    <TextView
        android:text="@string/txt_registrar"
        android:fontFamily="@font/comfortaa"
        android:textStyle="bold"
        android:textColor="@color/verde_fuente"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--Nombre de usuario-->
    <TextView
        android:text="@string/et_Nombreusuario"
        android:layout_marginTop="30dp"
        android:layout_marginRight="52dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/cafe_oscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="55dp">

        <EditText
            android:id="@+id/et_Nombreusuario"
            android:hint="@string/et_Nombreusuario"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--correo-->
    <TextView
        android:text="@string/tv_correoElectronico"
        android:layout_marginTop="10dp"
        android:layout_marginRight="55dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/cafe_oscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="55dp">

        <EditText
            android:id="@+id/et_Correo"
            android:hint="@string/et_Correo"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--contraseña-->
    <TextView
        android:text="@string/et_contrasena"
        android:layout_marginTop="10dp"
        android:layout_marginRight="91dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/cafe_oscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="310dp"
        android:layout_height="55dp">

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/et_contrasena"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--boton de registro-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrar"
        android:text="@string/btn_registrar"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        android:textStyle="bold"
        android:textColor="@color/verde_oscuro"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="@color/verde_boton"
        app:strokeColor="@color/verde_fuente2"
        app:strokeWidth="2dp"
        android:layout_width="200dp"
        android:layout_height="55dp"/>

    <!--la o xd-->
    <TextView
        android:id="@+id/txt_o"
        android:text="@string/txt_o"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/cafe_oscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--enlace para iniciar sesion-->
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/btn_iniciosesion"
        android:text="@string/btn_iniciarSesion"
        android:fontFamily="@font/comfortaa"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/azul_fuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>