<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/beige_claro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:textColor="@color/negro"
        >

        <TextView
            android:text="@string/vincular"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/verde_fuente"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtSsid"
                android:hint="@string/nombre_red_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/negro"
                android:textColorHint="@color/cardview_dark_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtPassword"
                android:hint="@string/contrasena_red_wifi"
                android:textColorHint="@color/cardview_dark_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/negro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtCorreo"
                android:hint="@string/correo_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/negro"
                android:textColorHint="@color/cardview_dark_background"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnBuscar"
            android:text="@string/buscar_dispositivos_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde_oscuro"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:layout_marginTop="20dp" />

        <ListView
            android:id="@+id/listViewDevices"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/negro"
            android:dividerHeight="1dp"
            android:divider="@color/negro"
            />

        <Button
            android:id="@+id/btnEnviar"
            android:text="@string/enviando_datos"
            android:backgroundTint="@color/verde_oscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blanco"/>

    </LinearLayout>
</FrameLayout>
