<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="24dp"
    android:background="@drawable/card_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mnsj_cerrar_sesion"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/verde_fuente"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_dialogo_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            android:textStyle="bold"
            android:textSize="18sp"
            android:backgroundTint="@color/verde_oscuro"
            android:textColor="@color/blanco"
            android:fontFamily="@font/comfortaa"
            android:layout_marginEnd="40dp"/>

        <Button
            android:id="@+id/btn_dialogo_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_si"
            android:textStyle="bold"
            android:textSize="18sp"
            android:backgroundTint="@color/verde_oscuro"
            android:textColor="@color/blanco"
            android:fontFamily="@font/comfortaa"/>

    </LinearLayout>

</LinearLayout>