<?xml version="1.0" encoding="utf-8"?>

<!-- Contenedor principal del fragmento de Configuraciones.
     Define el fondo, el contexto del fragmento y el espacio donde se mostrará el contenido. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_claro"
    tools:context="com.example.jardnzen_app.Fragmentos.FragmentConfiguraciones">

    <!-- LinearLayout principal que organiza todos los elementos de forma vertical dentro del ScrollView. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- Título principal de la pantalla, muestra la palabra "Configuración" en un tamaño grande y centrado visualmente. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/configuracion"
            android:textColor="@color/verde_fuente"
            android:textSize="40sp"
            android:textStyle="bold" />


        <!-- Sección para acceder al ajuste del nivel mínimo de humedad del suelo. -->
        <LinearLayout
            android:id="@+id/ajuste_humedad"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:background="@drawable/card_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <!-- Ícono visual que representa el agua, relacionado con la humedad del suelo. -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_gota_agua" />

            <!-- Texto que indica la acción de ajustar el nivel mínimo de humedad para el riego automático. -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/comfortaa"
                android:textStyle="bold"
                android:text="@string/ajustar_nivel_minimo_humedad"
                android:textColor="@color/verde_fuente"
                android:textSize="24sp"/>

        </LinearLayout>

        <!-- Sección para acceder a las configuraciones de alertas del sistema. -->
        <LinearLayout
            android:id="@+id/config_alert"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:background="@drawable/card_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <!-- Ícono que representa las notificaciones o alertas del sistema. -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_notificaciones" />

            <!-- Texto que identifica esta opción como la configuración de alertas. -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/comfortaa"
                android:textStyle="bold"
                android:text="@string/configuracion_alertas"
                android:textColor="@color/verde_fuente"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
